# SkillPointer

./: AGENTS.md  README.md  pyproject.toml  setup.py
.megamemory/: knowledge.db-shm  knowledge.db-wal
docs/agent-skills/: what-are-skills.md
tests/: __init__.py  test_setup.py
